apps/app-hub.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-app-hub
  labels:
    app: the-app-hub
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-app-hub
  template:
    metadata:
      labels:
        app: the-app-hub
    spec:
      automountServiceAccountToken: true
      serviceAccountName: app-hub-sa
      securityContext:
        runAsUser: 10000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: the-app-hub
        image: 275333454194.dkr.ecr.eu-west-2.amazonaws.com/platform-status:b95de680d8fa917d580ed688f48be7205037dbb5
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: the-app-hub-service
  namespace: my-app
spec:
  selector:
    app: the-app-hub
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: app-port
      protocol: TCP
      port: 8086
      targetPort: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: my-app
  name: the-app-hub-ingress
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
spec:
  ingressClassName: nginx
  rules:
  - host: app-hub.eiddev.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: the-app-hub-service
            port:
              number: 80
  tls:
  - hosts:
    - app-hub.eiddev.xyz
    secretName: the-app-hub-tls

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: the-app-hub-networkpolicy
  namespace: my-app
spec:
  podSelector:
    matchLabels:
      app: the-app-hub
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 5000
